tests/ui/empty_tag.stderr
error: Invalid @tag annotation format
       help: expected '@tag <tag_name>'
       note: example '@tag users' or '@tag authentication'
 --> tests/ui/empty_tag.rs:7:1
  |
7 | /// @tag
  | ^^^^^^^^

warning: unused import: `aide::axum::IntoApiResponse`
 --> tests/ui/empty_tag.rs:1:5
  |
1 | use aide::axum::IntoApiResponse;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `axum::response::Json`
 --> tests/ui/empty_tag.rs:2:5
  |
2 | use axum::response::Json;
  |     ^^^^^^^^^^^^^^^^^^^^
